long_introductions/kubernetes/manifests/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    name: client
spec:
  containers:
  - name: client
    image: ubuntu
    resources:
      requests:
        memory: "32Mi"
        cpu: "50m"
      limits:
        memory: "256Mi"
        cpu: "500m"
    command: ["tail", "-f", "/dev/null"]
