long_introductions/kubernetes/manifests/env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env
  labels:
    name: env
spec:
  containers:
  - name: env
    image: ubuntu
    command: ["/bin/bash", "-c", "echo $MYVAR $MYVAR2; sleep 99999"] 
    # env:
    #   - name: MYVAR
    #     value: "Hello from the environment"
    volumeMounts:
      - name: mysecrets
        mountPath: "/mysecrets"
      - name: myconfigurations
        mountPath: "/configs"
  volumes:
  - name: mysecrets
    secret:
      secretName: envsecret
  - name: myconfigurations
    configMap:
      name: myconfigmap
  terminationGracePeriodSeconds: 0
