long_introductions/kubernetes/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    name: web1
spec:
  # nodeName: aks-nodepool1-99589507-vmss000001
  containers:
  - name: web1
    image: nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "256Mi"
        cpu: 1
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: web2
  labels:
    name: web2
spec:
  # nodeName: aks-nodepool1-99589507-vmss000001
  containers:
  - name: web2
    image: nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "256Mi"
        cpu: 1
    ports:
      - containerPort: 80
