long_introductions/kubernetes/manifests/stress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress
spec:
  selector:
    matchLabels:
      app: stress
  replicas: 1
  template:
    metadata:
      labels:
        app: stress
    spec:
      containers:
      - name: web
        image: alexeiled/stress-ng
        args: ["--cpu", "1", "--timeout", "999999s"]
        resources:
          requests:
            memory: "64Mi"
            cpu: 1
          limits:
            memory: "512Mi"
            cpu: 1
