long_introductions/kubernetes/manifests/volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: writer
  template:
    metadata:
      labels:
        app: writer
    spec:
      containers:
      - name: writer
        image: ubuntu
        command: ["/bin/bash", "-c", "while true; do echo $HOSTNAME-$(date -u) >> /mnt/azure/out.txt; cat /mnt/azure/out.txt; sleep 15; done"]
        volumeMounts:
        - mountPath: /mnt/azure
          name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: my-azurefile
