long_introductions/kubernetes/manifests/lifecycleweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lifecycleweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lifecycleweb
  template:
    metadata:
      labels:
        app: lifecycleweb
    spec:
      containers:
      - name: lifecycleweb
        image: ghcr.io/tkubica12/lifecycleweb
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 1
          failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: lifecycleweb
spec:
  type: LoadBalancer
  selector:
    app: lifecycleweb
  ports:
  - name: http
    port: 80
    targetPort: 80
